# ssl-syslog-server

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  FileLogger.h  Logger.cpp  Logger.h  MemoryBoundedQueue.cpp  MemoryBoundedQueue.h  README.md  SSLUtil.cpp  SSLUtil.h  ScreenLogger.h  SyslogServer.cpp  SyslogServer.h  ThreadSafeQueue.h  benchmark.cpp  main.cpp
res/: config.json
